<resources>
    <string name="app_name">CCM App</string>
    <string name="login_Button">Login</string>
    <string name="username_Input">Username</string>
    <string name="password_Input">Password</string>
    <string name="company_logo">Company Logo</string>
    <string name="orderId_TextView">Order Id:</string>
    <string name="showOderIdNumber">2021–00000</string>
    <string name="clientName_TextView">CHRISTOPHER MENDES LTDA</string>
    <string name="productIdHeader_TextView">Product ID</string>
    <string name="descriptionHeader_TextView">Description</string>
    <string name="amountHeader_TextView">Amount</string>
    <string name="done_button">Done</string>
    <string name="a_button_with_a_barcode_reader_icon">A button with a barcode reader icon</string>
    <string name="title_activity_product_page">ProductPage</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="seraialNumberHeader_TextView">Serial Number</string>
    <string name="locationHeader_TextView">Location</string>
    <string name="productDescription_TextView">Example</string>
    <string name="serialNumberPage_TextView">Serial Number</string>
    <string name="purchaseOrderList_TextView">Purchase Order List</string>
    <string name="orderIdHeader_TextView">Order Id</string>
    <string name="clientHeader_TextView">Client</string>
    <string name="logout_button">logout button</string>
    <string name="open_scan">open scan</string>
    <string name="assembly_room">Assembly Room</string>
    <string name="ccm_logo">CCM Logo</string>
    <string name="username">Username</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
</resources>