<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProductPage">

    <FrameLayout
        android:id="@+id/header_PurchaseOrderList"
        android:layout_width="match_parent"
        android:layout_height="143dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <androidx.cardview.widget.CardView
            android:id="@+id/product_list_description"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:layout_marginTop="90dp"
            app:cardBackgroundColor="@color/ccm_blue_logo">


            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    tools:ignore="UselessParent">

                    <TextView
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="24dp"
                        android:text="@string/productIdHeader_TextView"
                        android:textColor="#FFFFFF"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_marginStart="80dp"
                        android:layout_marginTop="24dp"
                        android:text="@string/seraialNumberHeader_TextView"
                        android:textColor="#FFFFFF"
                        android:textStyle="bold" />

                </TableRow>

            </TableLayout>
        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:id="@+id/productDescriptionHeader_CardView"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="45dp"
            app:cardBackgroundColor="@color/ccm_red_logo"
            app:cardCornerRadius="10dp">

            <TextView
                android:id="@+id/productNameHeader_TextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/productDescription_TextView"
                android:textAlignment="center"
                android:textColor="#FFFFFF" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/header1"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:layout_marginTop="0dp"
            app:cardBackgroundColor="@color/ccm_logo_background"
            app:cardCornerRadius="10dp">

            <ImageView
                android:id="@+id/ccm_low_logo"
                android:layout_width="80dp"
                android:layout_height="55dp"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="5dp"
                android:contentDescription="@string/company_logo"
                app:srcCompat="@drawable/ccm_logo" />

            <TextView
                android:id="@+id/purchaseOrderList_TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="30dp"
                android:layout_marginTop="20dp"
                android:fontFamily="serif"
                android:text="@string/serialNumberPage_TextView"
                android:textColor="@color/ccm_blue_logo"
                android:textSize="20sp" />


        </androidx.cardview.widget.CardView>

    </FrameLayout>

    <ListView
        android:id="@+id/list_ProductPage"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/header_PurchaseOrderList"
        android:layout_marginTop="0dp"
        android:background="@color/divider"
        android:backgroundTint="@color/ccm_logo_background"
        android:clipToPadding="false"
        android:paddingBottom="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header_PurchaseOrderList" />

    <Button
        android:id="@+id/pp_done_button"
        android:layout_width="121dp"
        android:layout_height="65dp"
        android:layout_below="@+id/list_ProductPage"
        android:layout_marginStart="47dp"
        android:layout_marginTop="-75dp"
        android:backgroundTint="@color/ccm_blue_logo"
        android:text="@string/done_button" />

    <ImageButton
        android:id="@+id/pp_barcode_reader_button"
        android:layout_width="121dp"
        android:layout_height="50dp"
        android:layout_below="@+id/pp_done_button"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="47dp"
        android:layout_marginTop="-60dp"
        android:layout_marginEnd="47dp"
        android:background="@drawable/roundcorner"
        android:backgroundTint="@color/ccm_red_logo"
        android:contentDescription="@string/a_button_with_a_barcode_reader_icon"
        android:src="@drawable/barcode_reader_icon" />

</RelativeLayout>