<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PurchaseOrderPage">

    <FrameLayout
        android:id="@+id/header_PurchaseOrderPage"
        android:layout_width="match_parent"
        android:layout_height="143dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <androidx.cardview.widget.CardView
            android:id="@+id/list_description"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:layout_marginTop="90dp"
            app:cardBackgroundColor="@color/ccm_blue_logo">


            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    tools:ignore="UselessParent">

                    <TextView
                        android:text="@string/productIdHeader_TextView"
                        android:layout_marginTop="24dp"
                        android:layout_marginStart="10dp"
                        android:textStyle="bold"
                        android:textColor="#FFFFFF"
                    />

                    <TextView
                        android:text="@string/descriptionHeader_TextView"
                        android:layout_marginTop="24dp"
                        android:layout_marginStart="80dp"
                        android:textStyle="bold"
                        android:textColor="#FFFFFF"
                    />

                    <TextView
                        android:text="@string/amountHeader_TextView"
                        android:layout_marginTop="24dp"
                        android:layout_marginStart="50dp"
                        android:textStyle="bold"
                        android:textColor="#FFFFFF"
                    />

                    <ImageView
                        android:text="@string/productIdHeader_TextView"
                        android:layout_marginTop="18dp"
                        android:layout_marginStart="20dp"
                        android:src="@drawable/barcode_icon"
                        android:contentDescription="Barcode Icon"
                        tools:ignore="HardcodedText" />

                </TableRow>

            </TableLayout>
        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:id="@+id/client_name"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="45dp"
            app:cardBackgroundColor="@color/ccm_red_logo"
            app:cardCornerRadius="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:text="@string/clientName_TextView"
                />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/header1"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:layout_marginTop="0dp"
            app:cardBackgroundColor="@color/ccm_logo_background"
            app:cardCornerRadius="10dp">

            <ImageView
                android:id="@+id/ccm_low_logo"
                android:layout_width="80dp"
                android:layout_height="55dp"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="5dp"
                app:srcCompat="@drawable/ccm_logo"
                android:contentDescription="@string/company_logo"
                />

            <TextView
                android:id="@+id/oderTitle_TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_gravity="center_horizontal"
                android:layout_centerInParent="true"
                android:layout_marginTop="5dp"
                android:textSize="20sp"
                android:fontFamily="serif"
                android:text="@string/orderId_TextView"
                android:textColor="@color/ccm_blue_logo" />

            <TextView
                android:id="@+id/orderIdNumber_TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dp"
                android:textSize="20sp"
                android:fontFamily="serif"
                android:text="@string/showOderIdNumber"
                android:textColor="@color/ccm_blue_logo"
                />

        </androidx.cardview.widget.CardView>

    </FrameLayout>

    <ListView
        android:id="@+id/list_PurchaseOrderPage"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header_PurchaseOrderPage"
        android:background="@color/divider" />


</androidx.constraintlayout.widget.ConstraintLayout>